// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. caption without credits 1`] = `
<div>
  <div>
    <div>
      Some caption text goes in here
    </div>
  </div>
</div>
`;

exports[`2. caption with credits 1`] = `
<div>
  <div>
    <div>
      Some caption text goes in here
    </div>
    <div>
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`3. caption with credits only 1`] = `
<div>
  <div>
    <div>
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`4. caption with child 1`] = `
<div>
  <div>
    Hello world!
  </div>
  <div>
    <div>
      Some caption text goes in here
    </div>
    <div>
      JUST CREDITS
    </div>
  </div>
</div>
`;
